--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+libdui (0.19.1-1) unstable; urgency=low
+
+  * Fixes: NB#122086 - DuiTextEdit partially hides text
+  * Fixes: NB#153100 - DuiList doesn't update when items are removed from a model with group headers
+  * Fixes: NB#155802 - <MemLeak> duiimagedirectory.cpp duiwidgetview.cpp duitheme.cpp
+  * Fixes: NB#156247 - Duithemedaemon uses too much CPU time when applications start
+  * Fixes: NB#135578 - Very long strings are not completely displayed.
+  * Fixes: NB#156846 - DuiContainerView keeps a dangling pointer to a deleted layout after setting another layout to DuiContainer -> segfault
+  * Fixes: NB#155805 - label highlighting only works with richtext labels
+  * Fixes: NB#153557 - "switch" variant of duibutton doesnt scale properly
+  * Fixes: NB#157097 - Icon names are hardcoded in DuiHomeButtonPanelView & DuiEscapeButtonPanelView
+
+ -- Tomas Junnonen <tomas.junnonen@nokia.com>  Mon, 22 Feb 2010 13:35:00 +0200
+
 libdui (0.19.0-1) unstable; urgency=low
 
   * License changed
