Changes: Change orientation angle without animation, when window is hidden.
RevBy: Daniel d'Andrada
Details: Restore one-argument DuiWindow::setOrientationAngle() method by
removing orientation change mode parameter (immediate or animated). The
mode is now decided based on DuiWindow::isVisible(), which makes it
immediate when window was hidden or hasn't been shown yet. The correct
mode is passed to DuiSceneManager::setOrientationAngle(), which remains
a two-argument function.
Also move Dui::OrientationChangeMode enum to DuiSceneManager.

Includes compilation fix for ut_duilayout.
It doesn't break tests because the window is hidden when
they are run, so the rotation is immediate.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -30,8 +30,9 @@
 \subsection removed Removed or Renamed
 - escapeButtonMode() property was removed from DuiApplicationPage. Use escapeMode() instead.
 - DuiDialog::windowModal() was renamed to DuiDialog::systemModal().
-
 - DuiApplicationPage::pageTitleChanged(DuiApplicationPage *, const QString &title) signal was removed.
+- restored one-argument DuiWindow::setOrientationAngle(Dui::OrientationAngle), the rotation animation
+  is enabled by default and it's disabled if the window is hidden (DuiWindow::isVisible() returns false).
 
 \section v0190
 
