--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,4 +1,14 @@
 /*! \page news What's New in DirectUI
+\section v0200
+
+\subsection New
+
+- DuiSceneWindow appeared() and disappeared() signals.
+
+\subsection Deprecated
+
+- DuiSceneWindow windowShown() and windowHidden() signals. Use the new appeared() and disappeared() signals isnstead.
+
 \section v0190
 
 \subsection New
