--- a/doc/src/mainpage.dox
+++ b/doc/src/mainpage.dox
@@ -53,6 +53,7 @@
       <li><a href="layouts.html">Layouts</a></li>
       <li><a href="rotation.html">Rotation</a></li>
       <li><a href="appletdevelopment.html">Applets</a></li>
+      <li><a href="applicationextensions.html">Application extensions</a></li>
       <li><a href="prestart.html">Prestarting</a></li>
       <li><a href="notifications.html">Notifications</a></li>
       <li><a href="settingslanguageschema.html">Settings language reference</a></li>
