--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -15,6 +15,8 @@
 
 \subsection Deprecated
 
+- void loadTrCatalogs(), void insertTrToQCoreApp(), void removeTrFromQCoreApp()
+  - these methods will move into the private class of DuiLocale
 - void installCategoryCatalog(Category category, const QString &name);
   - was only useful for trid() no replacement needed
 - void removeCategoryCatalog(Category category, const QString &name);
