Changes: Introduces tab bar view to the DuiToolBar widget
RevBy: Daniel d'Andrada

Details: This patch adds a new tab bar view to the DuiToolBar widget.
Unit tests, documentation and WG page has been updated accordingly.

--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -13,6 +13,9 @@
 - DuiSceneWindow::DestroyWhenDismissed
 - DuiSceneWindow appeared() and disappeared() signals.
 
+- DuiToolBar has one more view for tab actions called as DuiToolbarTabView
+
+
 \subsection Deprecated
 
 - void loadTrCatalogs(), void insertTrToQCoreApp(), void removeTrFromQCoreApp()
